React - useEffect Hook

--- a/Programming/React/03. Hooks/01. useState.md
+++ b/Programming/React/03. Hooks/01. useState.md
@@ -1,4 +1,4 @@
-## React Hooks
+## React Hooks - useState
 
 ## useState - Error-Example(Simple Use Case)
 - 현재 아래 코드의 문제는 title의 값이 변경되었음에도 `re-rendering`을 하지 않는다는 점이다. 이때 `useState`를 사용하면 이 문제를 해결할 수 있다.
@@ -12,6 +12,7 @@ const ErrorExample = () => {
     title = 'hello people';
     console.log(title);
   };
+  
   return (
     <React.Fragment>
       <h2>{title}</h2>
